
2012-08-04
- desk/deskapp.c desk/icons.c: ICONBLKs in icons.c now use ptrs to data/mask
  instead of non-standard index numbers. (RFB)
- desk/deskapp.c desk/deskins.c desk/icons.c desk/icons.h: Clean up icon name
  stuff prior to implementing icons in a .RSC file. (RFB)

2012-08-05
- desk/deskact.c desk/deskapp.c desk/deskbind.h: Save ~2K RAM by replacing one
  of the global ICONBLK arrays with an array of pointers. (RFB)

2012-08-08
- bios/kprint.c: Fix bug in Super() expansion, introduced in rev 1.43. (RFB)
- desk/deskapp.c: Code cleanup: eliminate 'unused variable' warning
  messages. (RFB)

2012-08-09
- bios/amiga.c: Fixed clock year on real hardware. (VRI)
- bios/amiga.c: Fixed keyboard acknowledge bug. (VRI)
- desk/deskins.c: Fix desktop crash when doing 'Configure application' and
  no icons are available (eg 192K ROMs). (RFB)
- desk/deskwin.c: Change initial desktop display for 192K ROMs to standard
  text format (was strange 'text-as-icons' display). (RFB)

2012-08-10
- aes/gemobed.c: Code cleanup: removed compatibility macros & made local
  function static. (RFB)

2012-08-11
- bios/floppy.c: Renamed flopini() to flop_add_drive(). (VRI)
- bios/blkdev.c: Fixed Mediach() return value when there is no floppy. (VRI)

2012-08-13
- bios/amiga.c bios/amiga.h bios/floppy.c: Added support for reading ST floppies
  on Amiga. (VRI)
- tools/erd.c: Improve handling of ICONBLKs and TEDINFOs prior to upcoming
  icon resource decompiler. (RFB)
- desk/deskapp.c desk/icons.c desk/icons.h: Rename gl_ilist[] to
  icon_rs_iconblk[] for upcoming icon resource decompiler. (RFB)

2012-08-15
- bios/machine.c: Disabled currently useless 64 kB _FRB buffer on Amiga. (VRI)
- aes/* desk/*: Changed file selector string parameter types to BYTE*. (VRI)
- aes/*: Changed scrap functions string parameter types to BYTE*. (VRI)
- aes/*: Changed shell functions string parameter types to BYTE*. (VRI)
- aes/*: Removed global variables ad_scdir, ad_path, ad_scrap and ad_scmd. (VRI)