@@ -3920,3 +3920,4 @@ Start... early ages
 - aes/*: Changed scrap functions string parameter types to BYTE*. (VRI)
 - aes/*: Changed shell functions string parameter types to BYTE*. (VRI)
 - aes/*: Removed global variables ad_scdir, ad_path, ad_scrap and ad_scmd. (VRI)
+- aes/gemfslib.c: Fixed the file selector for deeply nested directories. (VRI)
